# OpenCL

./: README.md
lec_0/: ex_0.cpp  ex_1.cpp  lec_0.pptx
lec_0/src/: device_list.cpp  device_test.cpp  ex_1.cpp  hello_world.cpp
lec_1/: ex_1.cpp  ex_2.cl  ex_2.cpp  lec_1.pptx  matmul_load.cpp  profiler.h  wrapper_cpp.cpp
lec_2/: CMakeLists.txt  ex_0.cpp  ex_1.cpp  ex_2.cpp
materials/lec_1/: lec_1.pptx
materials/lec_1/src/: matmul_naive.cpp  wrapper_cpp.cl
materials/lec_2/: lec_2.pptx  ~$lec_2.pptx
materials/lec_2/src/: matmul_block.cl  matmul_block.cpp  profiler.cpp  reduce_2stage.cl  reduce_2stage.cpp  reduce_naive.cl  reduce_naive.cpp  reduce_simd.cl  reduce_simd.cpp  reduce_vec.cl  reduce_vec.cpp
materials/lec_3/: CMakeLists.txt  boost_func.cpp  boost_hello.cpp  boost_sqrt.cpp  ex_3.cpp  ex_4.cpp  lec_3.pptx  vexcl_func.cpp  vexcl_hello.cpp
test/: CMakeLists.txt  test.cpp
